<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:layout_marginBottom="608dp"
        android:fontFamily="@font/cinzel"
        android:gravity="center"
        android:paddingLeft="80dp"
        android:paddingRight="80dp"
        android:text="@string/header"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/name"
        android:layout_width="@dimen/textBoxWidth"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/cinzel_bold"
        android:gravity="center"
        android:text="@string/name"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/userName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/header"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <EditText
        android:id="@+id/userName"
        android:layout_width="@dimen/textBoxWidth"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/nameExample"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/phoneNum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <TextView
        android:id="@+id/phoneNum"
        android:layout_width="@dimen/textBoxWidth"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/cinzel_bold"
        android:gravity="center"
        android:text="@string/phoneNumber"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toTopOf="@+id/UserPhoneNum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userName" />

    <EditText
        android:id="@+id/UserPhoneNum"
        android:layout_width="@dimen/textBoxWidth"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/phoneNumExample"
        android:inputType="phone"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNum" />

    <TextView
        android:id="@+id/email"
        android:layout_width="@dimen/textBoxWidth"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="@font/cinzel_bold"
        android:gravity="center"
        android:text="@string/email"
        android:textSize="@dimen/textSize"
        app:layout_constraintBottom_toTopOf="@+id/userEmail"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UserPhoneNum" />

    <EditText
        android:id="@+id/userEmail"
        android:layout_width="@dimen/textBoxWidth"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="60dp"
        android:ems="10"
        android:gravity="center"
        android:hint="@string/userEmail"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/imageButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="@dimen/buttonWidth"
        android:layout_height="@dimen/buttonHeight"
        android:layout_marginStart="154dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="154dp"
        android:layout_marginBottom="111dp"
        android:adjustViewBounds="true"
        android:cropToPadding="false"
        android:onClick="clickMe"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userEmail"
        app:srcCompat="@drawable/arrowimage" />

</androidx.constraintlayout.widget.ConstraintLayout>